Problems on mobile, fixes #436
Added several fixes to css for mobile and 
changed the search page to display a search
form when on mobile.

--- a/app/assets/stylesheets/components/topbar.css.scss
+++ b/app/assets/stylesheets/components/topbar.css.scss
@@ -20,7 +20,14 @@ nav.top-bar {
   }
 
   li.search-form {
-    background: #000;
+    background: black;
+  }
+
+  li.search-icon a {
+    color: white;
+    font-size: 1.5rem;
+    margin-right: 10px;
+    background-color: black;
   }
 
   .search-field {
